--- a/index.html
+++ b/index.html
@@ -48,34 +48,72 @@
 
 	<hr>
 
-<div class="skills">
+	<div class="skills">
 
-	<div class="career_object">
-		<img class="career_img" src="image/career_history.png" alt="image_for_carrer_object">
-		<div class="career_text">
-			<h2>Career Objective</h2>
-			<p>To obtain a software developer position in a fun, fast-paced, cutting-edge environment that promotes teamwork and integrity and fosters personal and professional development.</p>
-		</div>		
+		<div class="career_object">
+			<img class="career_img" src="image/career_history.png" alt="image_for_carrer_object">
+			<div class="career_text">
+				<h2>Career Objective</h2>
+				<p>To obtain a software developer position in a fun, fast-paced, cutting-edge environment that promotes teamwork and integrity and fosters personal and professional development.</p>
+			</div>		
+		</div>
+
+		<div class="work_history">
+				<h2>Work History</h2>
+				<img class="work_img" src="image/work_history.png" alt="work_history">	
+				
+
+				<ol>
+					<li>(2022-2023) Worked for 4 months as HR executive and sir flit executive in the e-commerce company.</li>
+					<li><p>(2018-2022) Along with my studies, <strong>I worked for 5 years in KFC.</strong></p></li>
+					<li><p>(2012-1-2017) I have done many types of jobs. I have worked in such places as world division survey, auto spinning mill, EPZ camera making company, Prince Bazar store assistant, etc.</p></li>
+				</ol>
+		</div>
 	</div>
 
-	<div class="work_history">
-			<h2>Work History</h2>
-			<img class="work_img" src="image/work_history.png" alt="work_history">	
- 			
-
-			<ol>
-				<li>(2022-2023) Worked for 4 months as HR executive and sir flit executive in the e-commerce company.</li>
-				<li><p>(2018-2022) Along with my studies, <strong>I worked for 5 years in KFC.</strong></p></li>
-				<li><p>(2012-1-2017) I have done many types of jobs. I have worked in such places as world division survey, auto spinning mill, EPZ camera making company, Prince Bazar store assistant, etc.</p></li>
-			</ol>
-	</div>
-</div>
 	<hr>
+
+	
+
+	<div class="image-container">
+		<div class="image" id="r">
+		  <img id="image1" src="image/image1.png" alt="Image 1">
+		  <h4 class="image-heading">Image 1</h4>
+		  <p class="image-details">This is a description of Image 1.</p>
+		</div>
+		<div class="image">
+		  <img src="image/image2.png" alt="Image 2">
+		  <h4 class="image-heading">Image 2</h4>
+		  <p class="image-details">This is a description of Image 2.</p>
+		</div>
+		<div class="image">
+		  <img src="image/image3.png" alt="Image 3">
+		  <h4 class="image-heading">Image 3</h4>
+		  <p class="image-details">This is a description of Image 3.</p>
+		</div>
+		<div class="image">
+		  <img src="image/image4.png" alt="Image 4">
+		  <h4 class="image-heading">Image 4</h4>
+		  <p class="image-details">This is a description of Image 4.</p>
+		</div>
+		<div class="image">
+			<img src="image/image5.png" alt="Image 5">
+			<h4 class="image-heading">Image 5</h4>
+			<p class="image-details">This is a description of Image 5.</p>
+		  </div>
+	  </div>
+
+	  <hr>
+
 	<div class="btn">
-		<p class="btn_text">Contact me</p>
+		<div>
+			<p class="btn_text">Contact me</p>
+		</div>
 		
 	</div>
+
 	<hr>
+
 
 	<div class="footer">
 		<h1>Footer</h1>
