Add footer section and edit some propartis

--- a/index.html
+++ b/index.html
@@ -17,31 +17,34 @@
 
 <body >
 	<div class="header">
-		<div class="size_control">
-			<img src="image/black.jpg" 
-			alt="background_img">
+		<div class="header_img">
+			<img src="image/black.jpg" alt="background_img">
 			<div class="header_text">
-				<h1>Welcome</h1>
-				<p>I am a programmer.</p>
+				<h1>Welcome my web world</h1>
 			</div>
 		</div>	
 	</div>
 
-	<hr>
 
 	<div class="profile">
-		<table>
+		<table class="profile_table">
 			<tr>	
-				<th><img class="my_img" src="image/rokon.png" alt="Rokon image" width="200" height="200" align="center"></th>			
 				<th>
-					<h2 class="my_name">Md. Roknuzzaman Rokon</h2>
-					<ul class="my_detials">
-						<li>Cell: +8801739-933258</li>
-						<li>E-mail: rokon.raz@gmail.com</li>
-						<li><a href="https://www.linkedin.com/in/rokon-raz/">LinkedIn: linkedin.com/in/rokon-raz</a></li>
-						<li><a href="https://www.facebook.com/rokon.raz/">Facebook: facebook.com/rokon.raz/</a></li>
-					</ul>
+					<div class="profile_some_information">
+						<h2 >Md. Roknuzzaman Rokon</h2>
+						<ul>
+							<li>Cell: +8801739-933258</li>
+							<li>E-mail: rokon.raz@gmail.com</li>
+							<li><a href="https://www.linkedin.com/in/rokon-raz/">LinkedIn: linkedin.com/in/rokon-raz</a></li>
+							<li><a href="https://www.facebook.com/rokon.raz/">Facebook: facebook.com/rokon.raz/</a></li>
+						</ul>
+					</div>				
 				</th>
+				<th  class="profile_img">
+					<div>
+						<img class="profile_img_div" src="image/rokon.png" alt="Rokon image" width="200" height="200" align="center">			
+					</div>
+				</th>			
 			</tr>
 		</table>
 	</div>
@@ -116,8 +119,12 @@
 
 
 	<div class="footer">
-		<h1>Footer</h1>
-		<p>Something</p>
+		<ul>
+		  <li><a href="#">About</a></li>
+		  <li><a href="#">Contact</a></li>
+		  <li><a href="#">Privacy Policy</a></li>
+		</ul>
+		<p>Copyright &copy; 2023 My Website</p>
 	</div>
 </body>
 </html>
