Change icon,add 2 skill

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Roko</title>
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="icon" href="favicon.ico?v=2">
+	<link rel="icon" href="favicon (2).ico?v=2">
 
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -63,23 +63,118 @@
 
 		<div class="work_history">
 				<h2>Work History</h2>
-				<img class="work_img" src="image/work_history.png" alt="work_history">	
-				
-
+				<img class="work_img" src="image/work_history.png" alt="work_history">					
 				<ol>
 					<li>(2022-2023) Worked for 4 months as HR executive and sir flit executive in the e-commerce company.</li>
 					<li><p>(2018-2022) Along with my studies, <strong>I worked for 5 years in KFC.</strong></p></li>
 					<li><p>(2012-1-2017) I have done many types of jobs. I have worked in such places as world division survey, auto spinning mill, EPZ camera making company, Prince Bazar store assistant, etc.</p></li>
 				</ol>
 		</div>
+
+		
+		<div class="career_object">
+			<img class="career_img" src="image/wish.png" alt="image_for_carrer_object">
+			<div class="career_text">
+				<h2>My wish</h2>
+				<p>I want to do something with machine learning.I have an idea of 1 new machine, if this is developed, the money transactions of many businesses will become much easier</p>
+			</div>		
+		</div>
+
+		<div class="work_history">
+			<h2>Learning History and Project</h2>
+			<img class="work_img" src="image/learning.png" alt="work_history">					
+			<ol>
+				<li><p>Learning programming languages while I work, C,  HTML, CSS,  JavaScript, MySQL are known little, and then Python. </p></li>
+				<li><p>I can learn many machines with Python, such as coffee machines, digital clocks, snack games, blackjack, and many more. Also, there are more projects of this type like Hangman, High Low, Auction, Ceasercaiper, Guess Number, and Snack Game I know a lot about this type.</p></strong></p></li>
+				<li><p>”Automation of entering the restaurant and POS machine operation Using Face Recognition” This is my thesis paper. I was doing this project at university.</p></li>
+			</ol>
+	</div>
+	</div>
+
+	
+
+	<hr>
+
+	  <div class="skill_section">
+		<h2>My Skill</h2>
+		<table>
+			<tr>
+				<td><li>Python</li></td>
+				<td>★★★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>Backend Devloper</li></td>
+				<td>★★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>Python UI Design</li></td>
+				<td>★★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>Python Scripting</li></td>
+				<td>★★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>Python API Devlper</li></td>
+				<td>★★★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>HTML</li></td>
+				<td>★★★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>CSS</li></td>
+				<td>★★★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>JSON</li></td>
+				<td>★★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>MySQL</li></td>
+				<td>★★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>Bootstrap Framwork</li></td>
+				<td>★★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>javascript</li></td>
+				<td>★★★</td>
+			</tr>
+
+			<tr>
+				<td><li>Command line interface</li></td>
+				<td>★★★★★</td>
+			</tr>
+
+		</table>
+	  </div>
+	
+
+	  <hr>
+
+	<div class="btn">
+		<div>
+			<p class="btn_text">Contact me</p>
+		</div>
+		
 	</div>
 
 	<hr>
 
-	
-
-	<div class="image-container">
-		<div class="image" id="r">
+		<div class="image-container">
+		<div class="image">
 		  <img id="image1" src="image/image1.png" alt="Image 1">
 		  <h4 class="image-heading">Image 1</h4>
 		  <p class="image-details">This is a description of Image 1.</p>
@@ -105,18 +200,8 @@
 			<p class="image-details">This is a description of Image 5.</p>
 		  </div>
 	  </div>
-
-	  <hr>
-
-	<div class="btn">
-		<div>
-			<p class="btn_text">Contact me</p>
-		</div>
-		
-	</div>
-
+	  
 	<hr>
-
 
 	<div class="footer">
 		<ul>
@@ -128,3 +213,17 @@
 	</div>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
