Edit contact form.and style this form.

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 	<hr>
 
 	  <div class="skill_section">
-		<h2>My Skill</h2>
+		<h2>My Skill reating</h2>
 		<table>
 			<tr>
 				<td><li>Python</li></td>
@@ -166,7 +166,7 @@
 
 	<div class="btn">
 		<div>
-			<p class="btn_text">Contact me</p>
+			<p class="btn_text"><a href="contact_me.html">CONTACT ME</a></p>
 		</div>
 		
 	</div>
