--- a/contact_me.html
+++ b/contact_me.html
@@ -6,6 +6,12 @@
 	<title>Contact me</title>
 	<link rel="stylesheet" href="">
 	<link rel="stylesheet" href="css/style.css">
+
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Niconne&family=Solway&family=Tienne&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
