Add contact page icon.using favicon.ico site.

--- a/contact_me.html
+++ b/contact_me.html
@@ -6,6 +6,7 @@
 	<title>Contact me</title>
 	<link rel="stylesheet" href="">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="icon" href="contact_icon.ico?v=2">
 
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
